--- a/README
+++ b/README
@@ -24,5 +24,7 @@ CodeIgniter 為你而存在，假如 ..
 英文官方網站：http://codeigniter.com
 英文官方文件：http://codeigniter.com/user_guide/
 
-中文官方文件翻譯：appleboy, jiz, fillano
+如果想要最新的中文翻譯文件，請利用 git 方式取得：
+git clone git://github.com/appleboy/PHP-CodeIgniter-Framework-Taiwan.git 
 
+中文官方文件翻譯：appleboy, jiz, fillano
