--- a/README
+++ b/README
@@ -18,8 +18,8 @@ CodeIgniter 為你而存在，假如 ..
     * 你避免複雜，期待簡單。
     * 你需要清楚、完整的文件說明。
 
-中文官方網站：http://ci.wuboy.twbbs.org
-中文官方文件：http://ci.wuboy.twbbs.org/user_guide/
+中文官方網站：http://codeigniter.org.tw
+中文官方文件：http://codeigniter.org.tw/user_guide/
 
 英文官方網站：http://codeigniter.com
 英文官方文件：http://codeigniter.com/user_guide/
