README: update we bsite

--- a/README
+++ b/README
@@ -18,11 +18,11 @@ CodeIgniter 為你而存在，假如 ..
     * 你避免複雜，期待簡單。
     * 你需要清楚、完整的文件說明。
 
-中文官方網站：http://codeigniter.org.tw
-中文官方文件：http://codeigniter.org.tw/user_guide/
+中文官方網站: http://codeigniter.org.tw
+中文官方文件: http://codeigniter.org.tw/user_guide/
 
-英文官方網站：http://codeigniter.com
-英文官方文件：http://codeigniter.com/user_guide/
+英文官方網站: http://codeigniter.com
+英文官方文件: http://codeigniter.com/user_guide/
 
 如果想要最新的中文翻譯文件，請利用 git 方式取得：
 git clone git://github.com/appleboy/PHP-CodeIgniter-Framework-Taiwan.git 
